--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+.flex-container {
+  display: flex;
+  flex-flow: column;
+  align-items: center
+}
+
+.invoice-table {
+  display: flex
+}
+
+.invoice-table p {
+  padding: 5px;
+  text-align: left;
+}
